--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  overflow-y: auto;
+}
 .App {
   text-align: center;
 }
@@ -21,56 +27,54 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
-.row-header{
-  margin:0px auto;
-  padding:0px auto;
- 
-  color:black;
- 
+} */
+.row-header {
+  margin: 0px auto;
+  padding: 0px auto;
+  color: black;
 }
 
 .row-content {
-  margin:0px auto;
+  margin: 0px auto;
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge;
-  min-height:400px;
+  min-height: 400px;
 }
 
-.footer{
-  background-color: #D1C4E9;
-  margin:0px auto;
+.footer {
+  background-color: #fff;
+  margin: 0px auto;
   padding: 20px 0px 20px 0px;
 }
 .jumbotron {
-  padding:70px 30px 70px 30px;
-  margin:0px auto;
-  background: #9575CD ;
-  color:floralwhite;
+  padding: 70px 30px 70px 30px;
+  margin: 0px auto;
+  background: #9575cd;
+  color: floralwhite;
 }
 
-address{
-  font-size:80%;
-  margin:0px;
-  color:#0f0f0f;
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
 
 .navbar-dark {
-  background-color: #512DA8;
+  background-color: #959c9e;
 }
 
 .page-enter {
@@ -92,4 +96,83 @@ address{
   opacity: 0.01;
   transform: translateX(100%);
   transition: all 300ms ease-out;
+}
+
+.toogler {
+  background-image: url("./hamburger.png");
+  width: 25px;
+  height: 25px;
+}
+
+.toogler:focus,
+.toogler:active {
+  outline: none;
+  box-shadow: none;
+  border: none;
+}
+
+/* qoutes in banner section*/
+.quotation {
+  font-size: 15px;
+  margin: 0 auto;
+  quotes: "\201C""\201D""\2018""\2019";
+  padding: 10px 20px;
+  line-height: 1.4;
+}
+
+.quotation:before {
+  content: open-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: -5px;
+  position: relative;
+  top: 4px;
+  color: blue;
+  font-size: 2.5em;
+}
+.quotation::after {
+  content: close-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: 7px;
+  position: relative;
+  top: 20px;
+  color: blue;
+  font-size: 2.5em;
+}
+footer {
+  margin: -5px;
+  text-align: center;
+  font-size: 1em;
+}
+
+/* import-icon */
+
+.react-icon {
+  color: #ff944d;
+}
+
+/* quotation for review */
+
+.quotation-review {
+  font-size: 18px;
+  margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 15px;
+  quotes: "\201C""\201D""\2018""\2019";
+  line-height: 1.4;
+}
+
+.quotation-review::before {
+  content: open-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: -6px;
+  position: relative;
+  top: 20px;
+  color: blue;
+  font-size: 4em;
 }
